Added Factory and Deployer contract

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "^3.4.1",
-    "@superfluid-finance/ethereum-contracts": "^1.0.0-rc.5"
+    "@superfluid-finance/ethereum-contracts": "^1.0.0-rc.5",
+    "@truffle/hdwallet-provider": "^1.4.2"
   },
   "devDependencies": {}
 }
