--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "^3.4.1",
     "@superfluid-finance/ethereum-contracts": "^1.0.0-rc.5",
-    "@truffle/hdwallet-provider": "^1.4.2"
+    "@truffle/hdwallet-provider": "^1.4.2",
+    "truffle-contract-size": "^2.0.1"
   },
   "devDependencies": {}
 }
